<resources>
    <string name="device_calculate">计算示例</string>
    <string name="device_about">关于</string>
    <string name="device_back">返回</string>
    <string name="device_error">计算失败，请重试</string>
</resources>
